@@ -5,7 +5,8 @@ version 2.9.0 (MM/DD/YYYY):
 		Added:
 		* Hash table to PurpleConvChat struct, used to make
 		  purple_conv_chat_cb_find O(1).
-		* ui_data opaque pointer to PurpleConvChatBuddy struct.
+		* ui_data pointer to PurpleConvChatBuddy struct.
+		* deleting-chat-buddy signal (conversation signals)
 
 		Deprecated:
 		* purple_conv_chat_set_users
